--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "sass": "^1.69.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
